[gd_scene load_steps=2 format=3 uid="uid://dy1odsgouku0t"]

[ext_resource type="Script" path="res://Scripts/Classes/base_enemy.gd" id="1_1dn3n"]

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_1dn3n")

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="ShootPoint" type="Marker2D" parent="."]

[node name="VisibleNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="OffscreenTimer" type="Timer" parent="."]

[connection signal="screen_entered" from="VisibleNotifier" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleNotifier" to="." method="_on_screen_exited"]
[connection signal="timeout" from="OffscreenTimer" to="." method="_on_offscreen_timer_timeout"]
